--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -329,10 +329,10 @@ section {
 
 footer {
   width:170px;
-  float:left;
+  float:right;
   position:fixed;
   bottom:10px;
-	padding-left: 50px;
+	padding-right: 50px;
 }
 
 @media print, screen and (max-width: 960px) {
