--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -329,10 +329,10 @@ section {
 
 footer {
   width:170px;
-  float:right;
+  float:left;
   position:fixed;
   bottom:10px;
-	padding-right: 50px;
+	padding-left: 750px;
 }
 
 @media print, screen and (max-width: 960px) {
@@ -350,7 +350,7 @@ footer {
 
 	footer {
 		border-top: 1px solid #ccc;
-		margin:0 84px 400px 50px;
+		margin:0 84px 0 50px;
 		padding:0;
 	}
 
